--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index"
+    "start": "node src/index",
+    "standard": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
     "aws-sdk": "^2.317.0",
     "chance": "^1.0.16",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
