--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index",
+    "start": "node src/api",
     "standard": "standard --fix"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.317.0",
     "chance": "^1.0.16",
+    "express": "^4.16.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
